--- a/DD/Files/introduction.tex
+++ b/DD/Files/introduction.tex
@@ -18,11 +18,11 @@ TODO: remove unused ones
     \item {\textbf{Student:} the first kind of users and, basically, the people this product is designed for. Their objective is to submit solutions to battles}
     \item {\textbf{Team:} students can decide to group up and form a team to partecipate to a battle. The score assigned to the submission of a team will be assigned also to each one of its members}
     \item {\textbf{Educator:} the second kind of users. They create tournaments, set-up battles, and eventually, evaluate the solutions that teams of students have submitted during the challenge}
-    \item {\textbf{Tournament:} collection of coding exercises (battles) about specific topics of a subject. Interested students can subscribe to it and participate to its battles as soon as they are published}
+    \item {\textbf{Tournament:} collection of coding exercises (battles). Interested students can subscribe to it and participate to its battles as soon as they are published}
     \item {\textbf{Code Kata Battle (or battle):} the atomic unit of a tournament. Usually students are asked to implement an algorithm or to develope a simple project that solves the task. Each battle belongs to a specific tournament: students submitting solutions for a battle will obtain a score that will be used to compute both the team's rank for the battle and the members' tournament rank}
     \item {\textbf{Code Kata:} description and software project necessary for the battle, including test cases and build automation scripts. These are uploaded by the educator at battle creation time}
     \item {\textbf{Tournament collaborator:} other educator that is added by the tournament creator to help him in the management of the tournament. He can create battles and evaluate their submissions}
-    \item {\textbf{GitHub:} web-based hosting service for version control, mostly used for computer code. It offers both distributed version control and source code management functionalities}
+    \item {\textbf{GitHub:} web-based hosting service for version control, mostly used for programming. It offers both distributed version control and source code management functionalities}
     \item {\textbf{GitHub repository:} a repository is a storage space where some project files are stored. It can be either public or private. In the context of the platform, each battle is associated with a GitHub repository that is created by the system and shared with the teams}
     \item {\textbf{GitHub collaborator:} person who is granted access to a GitHub repository with write permission}
     \item {\textbf{GitHub Actions:} GitHub feature that allows to automate tasks directly on GitHub, such as building and testing code, or deploying applications. In the context of the platform, GitHub Actions is used to automatically notify the system when a new submission is pushed to the repository of a team}
