--- a/DD/dd.tex
+++ b/DD/dd.tex
@@ -20,7 +20,8 @@
 
 % Personalized colors
 \usepackage[dvipsnames]{xcolor}
-\definecolor{mycolor}{rgb}{0.858, 0.188, 0.478}
+\definecolor{myyellow}{RGB}{252, 186, 3}
+\definecolor{mygreen}{RGB}{4, 145, 68}
 
 \usepackage{graphicx}
 \usepackage[T1]{fontenc}
