fixed use cases description, changed state name in state diagram

--- a/RASD/Files/requirements.tex
+++ b/RASD/Files/requirements.tex
@@ -424,7 +424,7 @@ The main requirements the system has to fulfill are the following:
         \hline
         \textbf{Exceptions} & 
         \begin{itemize}
-            \item Battle is in Subscription Phase
+            \item Battle is in Registration Phase
         \end{itemize} 
         In the previous case the battle's ranking will simply show the list of teams that subscribed till now \\
         \hline
@@ -888,7 +888,7 @@ The main requirements the system has to fulfill are the following:
         \begin{itemize}
             \item Email does not belong to any educator registered to the platform
         \end{itemize} 
-        In the previous case, the educator is not able to close the tournament and a pop-up with a specific error message is shown \\
+        In the previous case, the educator is not able to add the collaborator and a pop-up with a specific error message is shown \\
         \hline
     \end{tabular}
     \begin{figure}[H]
@@ -937,7 +937,7 @@ The main requirements the system has to fulfill are the following:
         \hline
         \textbf{Exceptions} & 
         \begin{itemize}
-            \item Email does not belong to any educator registered to the platformEducator is trying to close the consolidation stage of a battle without having completed the manual code evaluation
+            \item Educator is trying to close the consolidation stage of a battle without having completed the manual code evaluation
         \end{itemize} 
         In the previous case, the educator is not able to close the battle and a pop-up with a specific error message is shown, asking the educator to complete the evaluation first \\
         \hline
