added note on team formation phase

--- a/RASD/Files/overview.tex
+++ b/RASD/Files/overview.tex
@@ -38,6 +38,7 @@ In order to provide a complete description of the application domain, here are i
     \label{battle_state}
 \end{figure}
 In particular, in the case of battles, which transition is taken after the submission stage only depends on whether the manual evaluation was enabled or not.
+The Team Formation phase will be also referred to as Registration phase in the rest of the document.
 
 \subsection{Product functions}
 \subsubsection{Sign up and Log in}
