updated queues deployment DD

--- a/DD/Files/architectural.tex
+++ b/DD/Files/architectural.tex
@@ -135,7 +135,7 @@ In Figure \ref{deployment_diagram} the nodes have been colored according to the 
 \end{figure}
 The most important aspects that are worth noticing are:
 \begin{itemize}
-    \item Each microservice has its own queue: these are logged (i.e. also persisted in main memory) so that, in case of failure, a new service can be deployed and the previous queue can be restored. This allows the system to be fault tolerant and to ensure that no communication data is lost.
+    \item Queues are deployed on a single phisical node. As we can see from the artifacts, all queues are built over the same code but replicated in a way that each type of microservice uses its own: this should increase modularity and maintainability of the system. Moreover these queues are logged (i.e. also persisted in secondary memory) so that, in case of failure, a new service can be deployed and the previous state of the queue can be restored: this allows the system to be fault tolerant by ensuring that no communication data is lost.
     \item Most of the microservices are deployed in a containerized environment, using Docker containers. This allows them to be easily deployed on necessity, allowing the system to scale out according to the current load. The Service Registry instead is deployed in a non-containerized environment, since it is a critical component of the system and it is important to ensure its availability. In particular, in order to achieve this, a master-slave approach has been chosen. The master instance is deployed on a physical node, while slave instances are deployed on different nodes: the latter ones have the task of monitoring the master instance and to copy its logs. In this way, if the master instance fails, one of the slave instances (e.g. chosen through a consensus algorithm) can be promoted to master so the system can continue to work from the point the master left without any interruption.
 \end{itemize}
 
